## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.14 2003/10/22 22:50:59 jonas Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = libconfig.a
libconfig_a_SOURCES = \
 cmdline.c \
 cmdline.h \
 conf.c \
 conf.h \
 dialogs.c \
 dialogs.h \
 kbdbind.c \
 kbdbind.h \
 options.c \
 options.h \
 options.inc \
 opttypes.c \
 opttypes.h \
 urlhist.c \
 urlhist.h
