## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.16 2003/12/01 13:55:40 pasky Exp $

include $(top_srcdir)/Makefile.base

noinst_LIBRARIES = liblowlevel.a
liblowlevel_a_SOURCES = \
 connect.c \
 connect.h \
 dns.c \
 dns.h \
 home.c \
 home.h \
 interlink.c \
 interlink.h \
 select.c \
 select.h \
 signals.h \
 signals.c \
 sysname.c \
 sysname.h \
 timer.c \
 timer.h

